<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">XYE Tools</string>
    <string name="user_interface">Main Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="empty">Empty</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="signal">Signal</string>
    <string name="quick_toggles">Quick Toggles</string>
    <string name="status_bar">Status Bar</string>
    <string name="others">Others</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="pie">PIE™</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="hybridsettings">Hybrid Properties</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="lockscreen">Lock Screen</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="title_general_ui">General UI</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_quick_toggles">Quick Toggles</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_statusbar">Status Bar</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led_control">LED Control</string>
    <string name="title_lockscreen">Lock Screen</string>
    <string name="title_pie">PIE™</string>
    <string name="title_hybridsettings">Hybrid Properties</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard.</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_pie">@null</string>
    <string name="header_summary_statusbar">@null</string>
    <string name="header_summary_lockscreen">@null</string>
    <string name="header_summary_hybridsettings">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen Extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">ICS</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="expanded_desktop_summary_status_bar">Status bar visible</string>
    <string name="expanded_desktop_summary_no_status_bar">Status bar hidden</string>
    <string name="expanded_desktop_disabled">Off</string>
    <string name="expanded_desktop_status_bar">Status bar visible</string>
    <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
    <string name="title_show_navbar_hide">Navigation bar menu</string>
    <string name="title_show_reboot_keyguard">Show reboot on lockscreen</string>
    <string name="status_bar_clock_header">Clock</string>
    <string name="status_bar_battery_header">Battery</string>
    <string name="status_bar_signal_header">Signal</string>
    <string name="status_bar_misc">Misc</string>
    <string name="status_bar_clock_title">Clock style</string>
    <string name="status_bar_general_title">General</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="clock_color_title">Clock color</string>
    <string name="clock_color_style_title">Clock color style</string>
    <string name="all_color">Colors Everywhere!</string>
    <string name="stock_color">Default Colors (Stock/Theme)</string>
    <string name="alarm">Alarms</string>
    <string name="clock_options">Clock Options</string>
    <string name="nothing">Nothing</string>
    <string name="today">Calendar for today</string>
    <string name="event">Calendar new event</string>
    <string name="voiceassist">Voice commands</string>
    <string name="title_clock_doubleclick">Clock double click actions</string>
    <string name="title_clock_longclick">Clock long click actions</string>
    <string name="title_clock_shortclick">Clock short click actions</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="pie_controls_title">Controls</string>
    <string name="pie_controls_summary">@null</string>
    <string name="pie_gravity_title">Pie gravity</string>
    <string name="pie_gravity_summary">Select the location where Pie will be placed at</string>
    <string name="pie_mode_title">Pie style</string>
    <string name="pie_mode_summary">Manage how animations and status additions will be handled</string>
    <string name="pie_size_title">Pie size</string>
    <string name="pie_size_summary">Define pie controls size</string>
    <string name="statusbar">Statusbar</string>
    <string name="statusbar_hide_title">Hide Statusbar</string>
    <string name="statusbar_hide_summary">Allow to completely hide the Statusbar</string>
    <string name="navigation_bar_alpha_title">Statusbar and navigation bar opacity</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="status_bar_background_style">Status bar background</string>
    <string name="nav_bar_background_style">Navigation bar background</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="show_overflow_title">Show Menu UI Overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="notification_behaviour_title">Notification behavior</string>
    <string name="notification_show_wifi_ssid_title">Show Wifi network on notification drawer</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network on notification drawer</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness. Does nothing when autobrightness is enabled.</string>
    <string name="tablet_cat">Tablet options</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some systembar stuff i.e. the compat mode button</string>
    <string name="multipane_ui">Enable Dual panel</string>
    <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
    <string name="hybrid_settings_title">Hybrid settings</string>
    <string name="uimode_title">UI Mode</string>
    <string name="system_dpi_title">System density</string>
    <string name="system_dpi_summary">Current system density:</string>
    <string name="appsuimode_title">Apps UI Mode</string>
    <string name="apps_dpi_title">Apps density</string>
    <string name="apps_dpi_summary">Current apps density:</string>
    <string name="dpi_groups_title">DPI Groups</string>
    <string name="dpi_groups_summary">Define wich apps should be in each DPI group</string>
    <string name="dpi_groups_backuprestore_title">Backup and restore</string>
    <string name="dpi_groups_auto_backup">Auto backup</string>
    <string name="dpi_groups_auto_backup_summary">Save your configuration with every change</string>
    <string name="dpi_groups_backup_title">Backup</string>
    <string name="dpi_groups_backup_summary">Backup your configuration</string>
    <string name="dpi_groups_restore_title">Restore</string>
    <string name="dpi_groups_restore_summary">Restore your configuration</string>
    <string name="per_app_layout_title">Per app layout</string>
    <string name="per_app_layout_summary">Define layout for each app</string>
    <string name="navbar_height_title">Navigation bar Height</string>
</resources>