<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="ui"
        android:title="@string/hybrid_settings_title">

        <ListPreference
            android:key="ui_mode"
            android:entries="@array/uimode_entries"
            android:entryValues="@array/uimode_values"
            android:title="@string/uimode_title" />

        <PreferenceScreen
            android:key="system_dpi"
            android:fragment="com.xylon.settings.beerbong.DpiPreferences"
            android:title="@string/system_dpi_title"
            android:summary="@string/system_dpi_summary" />

        <ListPreference
            android:key="apps_ui_mode"
            android:entries="@array/uimode_entries"
            android:entryValues="@array/uimode_values"
            android:title="@string/appsuimode_title" />

        <Preference
            android:key="apps_dpi"
            android:title="@string/apps_dpi_title"
            android:summary="@string/apps_dpi_summary" />

        <PreferenceScreen
            android:key="dpi_groups"
            android:fragment="com.xylon.settings.beerbong.DpiGroups"
            android:title="@string/dpi_groups_title"
            android:summary="@string/dpi_groups_summary" />

        <PreferenceScreen
            android:key="per_app_layout"
            android:fragment="com.xylon.settings.beerbong.PerAppLayout"
            android:title="@string/per_app_layout_title"
            android:summary="@string/per_app_layout_summary" />

        <Preference
            android:key="navbar_height"
            android:title="@string/navbar_height_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dpi_groups_backuprestore_title">

        <CheckBoxPreference
            android:key="dpi_groups_auto_backup"
            android:title="@string/dpi_groups_auto_backup"
            android:summary="@string/dpi_groups_auto_backup_summary"
            android:defaultValue="false" />

        <Preference
            android:key="dpi_groups_backup"
            android:title="@string/dpi_groups_backup_title"
            android:summary="@string/dpi_groups_backup_summary" />

        <Preference
            android:key="dpi_groups_restore"
            android:title="@string/dpi_groups_restore_title"
            android:summary="@string/dpi_groups_restore_summary" />

    </PreferenceCategory>

</PreferenceScreen>
