<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
            android:key="lcd_density_setup"
            android:title="@string/lcd_density_title"
            android:summary="@string/lcd_density_summary" />

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <CheckBoxPreference
            android:key="interface_recents_mem_display"
            android:title="@string/recents_rambar_title"
            android:summary="@string/recents_rambar_summary" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <com.xylon.settings.widgets.SeekBarPreference
            android:key="navigation_bar_alpha"
            android:title="@string/navigation_bar_alpha_title" />

        <PreferenceCategory
                android:key="tablet_cat"
                android:title="@string/tablet_cat">

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

        <CheckBoxPreference
            android:key="hide_extras"
            android:title= "@string/hide_extras"
            android:summary= "@string/hide_extras_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />

        <!-- PreferenceScreen
            android:key="frameworks_settings"
            android:title="@string/xposed_frameworks_settings">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="de.robv.android.xposed.installer"
                    android:targetClass="de.robv.android.xposed.installer.XposedInstallerActivity" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="dpi_settings"
            android:title="@string/xposed_dpi_settings">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="de.robv.android.xposed.mods.appsettings"
                    android:targetClass="de.robv.android.xposed.mods.appsettings.XposedModActivity" />
        </PreferenceScreen-->

        </PreferenceCategory>

    <PreferenceCategory
        android:key="toolbar_pie_controls"
        android:title="@string/pie_controls_title" />

        <CheckBoxPreference
            android:key="pie_controls"
            android:title="@string/pie_controls_title"
            android:summary="@string/pie_controls_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="pie_gravity"
            android:dialogTitle="@string/pie_gravity_title"
            android:title="@string/pie_gravity_title"
            android:summary="@string/pie_gravity_summary"
            android:entries="@array/entries_pie_gravity"
            android:entryValues="@array/values_pie_gravity" />

        <ListPreference
            android:key="pie_size"
            android:dialogTitle="@string/pie_size_title"
            android:title="@string/pie_size_title"
            android:summary="@string/pie_size_summary"
            android:entries="@array/entries_pie_size"
            android:entryValues="@array/values_pie_size" />

        <ListPreference
            android:key="pie_mode"
            android:dialogTitle="@string/pie_mode_title"
            android:title="@string/pie_mode_title"
            android:summary="@string/pie_mode_summary"
            android:entries="@array/entries_pie_mode"
            android:entryValues="@array/values_pie_mode" />

</PreferenceScreen>
