<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

   <header
     android:title="@string/statusbar" />

    <header
        android:id="@+id/statusbar_battery"
        android:fragment="com.xylon.settings.fragments.StatusBarBattery"
        android:title="@string/battery"
        android:icon="@drawable/ic_xy_settings_battery"
        android:summary="@string/header_summary" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.xylon.settings.fragments.StatusBarClock"
        android:title="@string/clock"
        android:icon="@drawable/ic_xy_settings_clock"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/statusbar_signal"
        android:fragment="com.xylon.settings.fragments.StatusBarSignal"
        android:title="@string/signal"
        android:icon="@drawable/ic_xy_settings_signal"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/quick_toggles"
        android:title="@string/quick_toggles"
        android:fragment="com.xylon.settings.fragments.QuickToggles"
        android:icon="@drawable/ic_xy_settings_quick_toggles"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/pie"
        android:fragment="com.xylon.settings.fragments.Pie"
        android:title="@string/pie"
        android:icon="@drawable/ic_xy_settings_pie"
        android:summary="@string/header_summary" />

    <header
        android:id="@+id/status_extras"
        android:fragment="com.xylon.settings.fragments.StatusExtras"
        android:title="@string/status_extras"
        android:icon="@drawable/ic_xy_settings_status_extras"
        android:summary="@string/header_summary" />

   <header
        android:title="@string/user_interface" />

     <header
        android:id="@+id/general_ui"
        android:fragment="com.xylon.settings.fragments.GeneralUI"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_xy_settings_general_ui"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/lock_screen"
        android:fragment="com.xylon.settings.fragments.Lockscreen"
        android:title="@string/lockscreen"
        android:icon="@drawable/ic_xy_settings_lockscreen"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/navigation_bar"
        android:fragment="com.xylon.settings.fragments.NavigationBar"
        android:title="@string/navigation_bar"
        android:icon="@drawable/ic_xy_settings_navigation_bar"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/nav_ring"
        android:fragment="com.xylon.settings.fragments.NavRingTargets"
        android:icon="@drawable/ic_xy_settings_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/header_summary" />

     <header
         android:id="@+id/themes"
         android:icon="@drawable/ic_xy_settings_themes"
         android:title="@string/themes_title">
         <intent
             android:action="android.intent.action.MAIN"
             android:targetPackage="com.tmobile.themechooser"
             android:targetClass="com.tmobile.themechooser.ThemeChooser" />
     </header>

    <header
        android:id="@+id/system"
        android:title="@string/system" />

     <header
        android:id="@+id/hybrid"
        android:fragment="com.xylon.settings.beerbong.HybridSettings"
        android:title="@string/title_hybridsettings"
        android:icon="@drawable/ic_xy_settings_jellybeer"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/led"
        android:fragment="com.xylon.settings.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_xy_settings_led"
        android:summary="@string/header_summary" />

     <header
        android:id="@+id/power_menu"
        android:fragment="com.xylon.settings.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_xy_settings_power_menu"
        android:summary="@string/header_summary" />

    <header
        android:id="@+id/spen"
        android:fragment="com.xylon.settings.fragments.SPenGestures"
        android:title="@string/spen_options"
        android:icon="@drawable/ic_xy_settings_spen"
        android:summary="@string/header_summary" />

</preference-headers>
